Fix for unwanted scrollbars in widgets

--- a/style/basewidget.css
+++ b/style/basewidget.css
@@ -160,6 +160,7 @@ button.nbtools-connect {
 
 /* Hack fix for floating menus */
 
+div.jupyter-widgets,
 .lm-Widget.jp-OutputPrompt.jp-OutputArea-prompt,
 .lm-Widget.p-Widget.jp-OutputArea,
 .lm-Widget.lm-Widget.jp-OutputArea,
@@ -167,5 +168,5 @@ button.nbtools-connect {
 .lm-Widget.lm-Panel.jp-OutputArea-child,
 .lm-Widget.lm-Panel.jp-OutputArea-output,
 .lm-Widget.jp-OutputArea.jp-Cell-outputArea {
-    overflow: visible;
+    overflow: visible !important;
 }
